--- a/web-dev-course/facebook/style.css
+++ b/web-dev-course/facebook/style.css
@@ -2,6 +2,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-family: 'Helvetica', 'Arial', sans-serif !important;
 }
 
 .root {
@@ -41,22 +42,22 @@
 
 .item {
 	padding-left: 14px;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: 'Helvetica', 'Arial', sans-serif;
 	font-size: 0.8em;
 }
 
-.item > p {
+.item>p {
 	color: white;
 }
 
-.item > input {
+.item>input {
 	width: 150px;
 }
 
-.item > button {
+.item>button {
 	background-color: #4267B2;
 	color: white;
-	border: 5px bold black;
+	border: 1px solid #29487d;
 	font-weight: bold;
 	padding: 1px 6px;
 }
@@ -93,7 +94,20 @@
 }
 
 .right {
-	font-family: 'Helvetica', 'Arial', sans-serif;
+	font-family: 'Freight Sans Bold', Helvetica, Arial, sans-serif !important;
+}
+
+.texting {
+	padding: 20px 0;
+}
+
+.texting>h1 {
+	margin-bottom: 5px;
+	font-size: 36px;
+}
+
+.texting>p {
+	font-size: 19px;
 }
 
 .people {
@@ -103,18 +117,74 @@
 }
 
 .row1 {
-	display: flex;
-	flex-direction: row;
+	width: 100%;
+}
+
+.row1>input {
+	border-radius: 5px;
+	border: 1px solid lightgrey;
+	padding: 8px 10px;
+	font-size: 18px;
+	width: 194px;
+	margin-bottom: 10px;
 }
 
 .row23>input {
+	padding: 8px 10px;
+	font-size: 18px;
 	width: 100%;
+	margin-bottom: 10px;
+	border: 1px solid lightgrey;
+	border-radius: 5px;
+}
+
+.details-wrap {
+	width: 75%;
+}
+
+.details {
+	font-size: 11px;
+	text-decoration: none;
+	color: grey;
+}
+
+.sex {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	width: 60%;
+	margin: 20px 5px;
+	font-size: 18px;
+}
+
+.sex label {
+	font-family: 'Helvetica', 'Arial', sans-serif;
+}
+
+.name {
+	margin-right: 8px;
+}
+
+.fields input::-webkit-input-placeholder {
+  font-family: 'Helvetica', 'Arial', sans-serif;
+}
+
+.fields input:-ms-input-placeholder {
+  font-family: 'Helvetica', 'Arial', sans-serif;
+}
+
+.fields input:-moz-placeholder {
+  font-family: 'Helvetica', 'Arial', sans-serif;
+}
+
+.fields input::-moz-placeholder {
+  font-family: 'Helvetica', 'Arial', sans-serif;
 }
 
 .create-account-button {
 	padding: 7px 20px;
-	margin: 10px 0;
-	font-family: 'Freight Sans Bold', Helvetica, Arial, sans-serif !important;
+	margin: 25px 0;
+	font-family: 'Helvetica', 'Arial', sans-serif !important;
 	font-weight: bold;
 	color: white;
 	background: linear-gradient(#67ae55, #578843);
@@ -122,4 +192,16 @@
 	border-radius: 5px;
 	font-size: 19px;
 	border-color: #3b6e22 #3b6e22 #2c5115;
+}
+.bday {
+	font-family: 'Helvetica', 'Arial', sans-serif !important;
+	margin-top: 10px;
+}
+
+.create-another-account {
+	font-family: 'Helvetica', 'Arial', sans-serif !important;
+	font-weight: bold;
+	font-size: 13px;
+	color: #666;
+	margin: 10px 0;
 }
