--- a/web-dev-course/04.10.17/css/style.css
+++ b/web-dev-course/04.10.17/css/style.css
@@ -10,14 +10,14 @@
 	display: flex;
 	flex-direction: column;
 	margin: 0 auto;
-	padding: 20px 0;
+	padding: 25px 0;
 	border: 1px solid black;
 }
 
 .head {
 	height: 80px;
 	display: flex;
-	padding: 20px;
+	padding: 30px;
 }
 
 .head-text {
@@ -28,20 +28,26 @@
 
 .bottom-line {
 	border-bottom: 1px solid #E6EFF3;
-	padding: 20px;
+	padding: 30px;
+}
+
+.bottom-invisible {
+	border-bottom: 1px solid rgba(0,0,0,0) !important;
+	padding: 30px;
 }
 
 .card {
 	margin: 0 10px;
 	margin-bottom: 20px;
 	background-color: white;
+	padding: 10px 0;
 	border-radius: 5px;
 }
 
 .title-text {
 	color: #9DA0B1;
 	font-size: 18px;
-	margin: 20px 0;
+	margin: 30px 0;
 }
 
 .dotted-button {
@@ -52,6 +58,7 @@
 	color: #3598FE;
 	cursor: pointer;
 	font-size: 18px;
+	font-weight: bolder;
 }
 
 .grad {
@@ -73,7 +80,7 @@
 	font-size: 1.5em;
 	font-weight: bolder;
 	color: #6A7189;
-	margin: 20px 0;
+	margin: 40px 0;
 }
 
 .wrapper {
