--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -10,6 +10,15 @@ body {
 
 /* General & 'Reset' Stuff */
 
+.grad {
+  color: rgb(255, 255, 255);
+  font-size: 32px;
+  background-image: linear-gradient(45deg, rgb(255, 118, 118) 0%, rgb(245, 78, 162) 100%);
+  display: inline-block;
+  padding: 0.2em 0.5em;
+  border-radius: 0.2em;
+}
+
 .container {
   width: 90%;
   max-width: 600px;
