--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -19,10 +19,16 @@ body {
   border-radius: 0.2em;
 }
 
+a {
+  text-decoration: none;
+}
+
 .container {
   width: 90%;
   max-width: 600px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 section {
