--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -10,13 +10,54 @@ body {
 
 /* General & 'Reset' Stuff */
 
+i {
+  font-size: 5em;
+}
+
+.network {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+}
+
 .grad {
-  color: rgb(255, 255, 255);
+/*  
   font-size: 32px;
-  background-image: linear-gradient(45deg, rgb(255, 118, 118) 0%, rgb(245, 78, 162) 100%);
+  background-image: linear-gradient(45deg, rgb(0, 255, 0) 0%, rgb(0, 128, 255) 100%);
+*/
+  color: rgb(255, 255, 255);
   display: inline-block;
-  padding: 0.2em 0.5em;
   border-radius: 0.2em;
+  padding: 0.2em 0.5em;
+  background: linear-gradient(44deg, #2eee2d, #3ab4ec);
+  background-size: 400% 400%;
+
+  -webkit-animation: AnimationName 33s ease infinite;
+  -moz-animation: AnimationName 33s ease infinite;
+  -o-animation: AnimationName 33s ease infinite;
+  animation: AnimationName 33s ease infinite;
+
+  @-webkit-keyframes AnimationName {
+      0%{background-position:90% 0%}
+      50%{background-position:11% 100%}
+      100%{background-position:90% 0%}
+  }
+  @-moz-keyframes AnimationName {
+      0%{background-position:90% 0%}
+      50%{background-position:11% 100%}
+      100%{background-position:90% 0%}
+  }
+  @-o-keyframes AnimationName {
+      0%{background-position:90% 0%}
+      50%{background-position:11% 100%}
+      100%{background-position:90% 0%}
+  }
+  @keyframes AnimationName { 
+      0%{background-position:90% 0%}
+      50%{background-position:11% 100%}
+      100%{background-position:90% 0%}
+  }
 }
 
 a {
@@ -24,11 +65,25 @@ a {
 }
 
 .container {
-  width: 90%;
-  max-width: 600px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.center {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.name {
+  font-size: 4em;
 }
 
 section {
